--- a/android/pom.xml
+++ b/android/pom.xml
@@ -20,6 +20,20 @@
         <maven.compiler.source>1.6</maven.compiler.source>
         <maven.compiler.target>1.6</maven.compiler.target>
     </properties>
+  
+  <repositories>
+  <repository>
+    <id>sonatype-nexus-snapshots</id>
+    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+  </repository>
+</repositories>
+  
+  <pluginRepositories>
+  <pluginRepository>
+   <id>sonatype-nexus-snapshots</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+  </pluginRepository>
+</pluginRepositories>
 
     <dependencies>
     <dependency>
@@ -32,6 +46,11 @@
         <artifactId>java-client</artifactId>
         <version>4.1.2</version>
     </dependency>
+      <dependency>
+    <groupId>com.browserstack</groupId>
+    <artifactId>automate-testassist</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+</dependency>
     <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
@@ -56,6 +75,23 @@
 
     <build>
         <plugins>
+          <plugin>
+        <groupId>com.browserstack</groupId>
+        <artifactId>automate-maven-plugin</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+        <configuration>
+            <source>1.8</source>
+            <target>1.8</target>
+            <complianceLevel>1.8</complianceLevel>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>test-compile</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
